# pydb-faker

./: README.md  pyproject.toml
src/pydb-faker/: _pydb-faker.py
